--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <a href="#" class="active">Portfolio</a> 
     <a href="project.html">Projects</a>
     <a href="resume.html">Resume</a>
-    <a href="https://medium.com/@davidstefanusst">My Blog</a>
+    <a href="https://medium.com/@davidstefanusst" target="_blank">My Blog</a>
     </nav>
     <!-- <a href="https://medium.com/@davidstefanusst" class="contact">BLOG</a>  -->
 </header>
@@ -47,15 +47,76 @@
 
         <div class="about-content">
             <h2 class="heading">About Me</h2>
-            <h3>Fresh Graduate</h3>
             <p>
+                As a recent IT graduate from Politeknik Negeri Jakarta. I am
+                passionate to work in a Tech Company and ready to pursue my
+                career in IT and Communication Field.
             </p>
-            <a href="#" class="btn-2"> Experience</a>
+            <p>
+                My education and hands-on experience have equipped me with a
+                strong foundation in routers, Cisco technologies, Linux systems,
+                and developing a network automation configuration console
+                program using Python as part of my undergraduate thesis project.
+
+            </p>
+            <p>
+                In my free time, I try to expand my software development skill
+                through online resources, gaining proficiency in MySQL,
+                MongoDB, Python, web development with the MEN stack, as well
+                as Docker and Nginx load balancing. This ongoing learning
+                reflects my adaptability and commitment to being equipped for
+                continual growth and improvement.
+            </p>
+            I'm looking to join an IT team where I can contribute my skills as a
+            support specialist, developer, or staff member. I’m focused on
+            building my technical expertise and strengthening my problemsolving,
+            teamwork, and adaptability to grow into a well-rounded
+            professional.
+            </p>
+            <!-- <a href="#" class="btn-2"> Experience</a> -->
         </div>
     </section>
 
-    <!-- <section class="contact-form">
-        <h2 class="contact-me">Contact Me
+    <section class="contact-form">
+        <h2 class="heading">Tools</h2>
+        <div class="tools-container">
+            
+            <div class="tool-card">
+              <img src="python.png" alt="Python Icon">
+              <h3>Python</h3>
+            </div>
+            <div class="tool-card">
+              <img src="nodejs.png" alt="JavaScript Icon">
+              <h3>JavaScript</h3>
+            </div>
+            <div class="tool-card">
+              <img src="mysql.png" alt="Mysql Icon">
+              <h3>Mysql</h3>
+            </div>
+            <div class="tool-card">
+              <img src="MongoDB_SpringGreen.png" alt="MongoDB Icon">
+              <h3>MongoDB</h3>
+            </div>
+            <div class="tool-card">
+              <img src="linux.png" alt="Linux Icon">
+              <h3>Linux</h3>
+            </div>
+            <div class="tool-card">
+                <img src="nginx.png" alt="Nginx Icon">
+                <h3>Nginx</h3>
+              </div>
+            <div class="tool-card">
+                <img src="docker.png" alt="Docker Icon">
+                <h3>Docker</h3>
+            </div>
+            <div class="tool-card">
+            <img src="git.png" alt="Git Icon">
+            <h3>Git</h3>
+            </div>
+            <!-- Add more tool-cards as needed -->
+          </div>
+
+        <!-- <h2 class="contact-me">Contact Me
         </h2>
 
         <form action="#">
@@ -71,8 +132,8 @@
 
             <textarea name="" id="" cols="30" rows="10" placeholder="Your Message"></textarea>
             <input type="submit" value="Send Message" class="btn-1">
-        </form>
-    </section> -->
+        </form> -->
+    </section>
 
     <footer class="footer">
         <div class="social">
