--- a/resume.html
+++ b/resume.html
@@ -14,7 +14,7 @@
         <a href="index.html">Portfolio</a> 
         <a href="project.html">Projects</a>
         <a href="resume.html" class="active">Resume</a>
-        <a href="https://medium.com/@davidstefanusst">My Blog</a>
+        <a href="https://medium.com/@davidstefanusst" target="_blank">My Blog</a>
         </nav>
     </header>
     <section class="home">
